--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://connect.facebook.net https://static.hotmart.com https://pay.hotmart.com; style-src 'self' 'unsafe-inline' https://static.hotmart.com; img-src 'self' data: https://www.facebook.com https://static.hotmart.com; font-src 'self' data:; connect-src 'self' https://www.facebook.com https://static.hotmart.com;" />
   <link rel="icon" href="/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Protocolo de Raíz | Desinflama tu Abdomen</title>
@@ -28,7 +30,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
