feat: Initialize React application with core components, lazy loading, and a snow effect.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Protocolo de Raíz | Desinflama tu Abdomen</title>
 
+  <!-- Performance Optimization -->
+  <link rel="preconnect" href="https://static.hotmart.com" crossorigin>
+  <link rel="preconnect" href="https://pay.hotmart.com" crossorigin>
+  <link rel="preconnect" href="https://connect.facebook.net" crossorigin>
+  <link rel="dns-prefetch" href="https://www.facebook.com">
+
+  <!-- Preload critical images for mobile -->
+  <link rel="preload" as="image" href="/hero-image.png" media="(max-width: 768px)">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://sanatucuerpo.vercel.app/" />
