--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://connect.facebook.net https://static.hotmart.com https://pay.hotmart.com; style-src 'self' 'unsafe-inline' https://static.hotmart.com; img-src 'self' data: https://www.facebook.com https://static.hotmart.com; font-src 'self' data:; connect-src 'self' https://www.facebook.com https://static.hotmart.com;" />
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://connect.facebook.net https://static.hotmart.com http://static.hotmart.com https://pay.hotmart.com; style-src 'self' 'unsafe-inline' https://static.hotmart.com http://static.hotmart.com https://fonts.googleapis.com; img-src 'self' data: https://www.facebook.com https://static.hotmart.com http://static.hotmart.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://www.facebook.com https://static.hotmart.com http://static.hotmart.com https://api-checkout-vue.hotmart.com https://pay.hotmart.com; frame-src https://pay.hotmart.com;" />
   <link rel="icon" href="/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Protocolo de Raíz | Desinflama tu Abdomen</title>
@@ -53,6 +53,22 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=863038383089458&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
+
+  <!-- Hotmart Checkout Widget -->
+  <script type="text/javascript">
+    function importHotmart() {
+      var imported = document.createElement('script');
+      imported.src = 'https://static.hotmart.com/checkout/widget.min.js';
+      document.head.appendChild(imported);
+      var link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css';
+      document.head.appendChild(link);
+    }
+    importHotmart();
+  </script>
+  <!-- End Hotmart Checkout Widget -->
 </head>
 
 <body>
